--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,13 @@ body {
 }
 
 /* About */
+
+.about-section{
+  color: white;
+  text-align: center;
+  padding: 80px 0;
+}
+
 .about-container {
   display: flex;
   justify-content: center;
@@ -85,19 +92,40 @@ body {
   margin-top: 40px;
 }
 .about-card {
+  width: 35%;
+  height: auto;
   background: white;
-  color: #00065B;
-  padding: 2rem;
-  border-radius: 20px;
-  width: 50%;
+  border-radius: 30px;
+  color: #00065b;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
 }
 
-.about-logo{
-  background: white;
-  color: #00065B;
-  padding: 2rem;
-  border-radius: 20px;
-  width: 40%;
+.logo img{
+  width: 65%;
+  height: auto;
+}
+
+.info h2{
+  font-size: 35px;
+  color: #A8CF45;
+  margin-bottom: 0;
+}
+
+.info .star-info{
+  text-align: justify;
+}
+
+.info .star-info h3{
+  color: #A8CF45;
+  margin-bottom: 0;
+}
+
+.info .star-info p{
+  margin-top: 0;
 }
 
 /* Services */
@@ -159,6 +187,19 @@ body {
   font-size: 35px;
 }
 
+.all-services{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  text-align: left;
+  width: 100%;
+}
+
+.all-services h3{
+  margin-bottom: 0;
+}
 
 .image-card img{
   width: 100%;
@@ -166,7 +207,71 @@ body {
 }
 
 .seguros-services, .creditos-services{
-  width: 90%;
+  width: 100%;
+}
+
+.seguros-list, .creditos-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: grid;
+  grid-auto-flow: column; /* llena por columnas */
+  grid-template-rows: repeat(7, auto); /* 7 elementos en la primera columna */
+  font-size: 15px;
+  width: 100%;
+}
+
+/* 2 columnas a partir de cierto punto */
+.seguros-list {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.seguros-list li, .creditos-list li {
+  position: relative;
+  padding-left: 10px;
+   /* espacio para el ícono */
+}
+
+.seguros-list li::before, .creditos-list li::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 18px;
+  height: 18px;
+  background-image: url('/src/assets/IMGs/Vector.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-bottom: 0;
+}
+
+/* Los primeros 7 ítems van en la primera columna */
+.seguros-list li:nth-child(-n+7) {
+  grid-column: 1;
+}
+
+/* Los siguientes van a la segunda columna */
+.seguros-list li:nth-child(n+8) {
+  grid-column: 2;
+}
+
+/* Créditos: el primero en la columna 1, el segundo en la columna 2 */
+.creditos-list {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.creditos-list li:nth-child(1) {
+  grid-column: 1;
+}
+
+.creditos-list li:nth-child(2) {
+  grid-column: 2;
+}
+
+/* Opcional: para que las columnas estén bien alineadas */
+.seguros-list li, .creditos-list li {
+  margin-bottom: 0.3rem;
 }
 
 
@@ -200,67 +305,7 @@ body {
   cursor: pointer;
 }
 
-.seguros-list, .creditos-list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: grid;
-  grid-auto-flow: column; /* llena por columnas */
-  grid-template-rows: repeat(7, auto); /* 7 elementos en la primera columna */
-  gap: 0.5rem 2rem; /* espacio entre filas y columnas */
-  font-size: 15px;
-}
 
-/* 2 columnas a partir de cierto punto */
-.seguros-list {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.seguros-list li, .creditos-list li {
-  position: relative;
-  padding-left: 10px; /* espacio para el ícono */
-}
-
-.seguros-list li::before, .creditos-list li::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 18px;
-  height: 18px;
-  background-image: url('/src/assets/IMGs/Vector.svg');
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-/* Los primeros 7 ítems van en la primera columna */
-.seguros-list li:nth-child(-n+7) {
-  grid-column: 1;
-}
-
-/* Los siguientes van a la segunda columna */
-.seguros-list li:nth-child(n+8) {
-  grid-column: 2;
-}
-
-/* Créditos: el primero en la columna 1, el segundo en la columna 2 */
-.creditos-list {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.creditos-list li:nth-child(1) {
-  grid-column: 1;
-}
-
-.creditos-list li:nth-child(2) {
-  grid-column: 2;
-}
-
-/* Opcional: para que las columnas estén bien alineadas */
-.seguros-list li, .creditos-list li {
-  margin-bottom: 0.3rem;
-}
 
 /* === ALIADOS === */
 .aliados-section {
@@ -443,8 +488,8 @@ body {
   gap: 20px;
 }
 .circle {
-  width: 100px;
-  height: 100px;
+  width: 125px;
+  height: 125px;
   background: #d9d9d9;
   border-radius: 50%;
   background-image: url(./assets/IMGs/Circular050_1.png);
